# voxter

./: .gitignore  README.md  pyproject.toml
assets/: README.md
assets/geometry-dash/: README.md
configs/: README.md
data/: README.md
data/datasets/: README.md
data/processed/: README.md
data/raw/: README.md
docs/codex/: README.md  algorithms.md  architecture.md  build-and-test.md  code-review.md  data-and-datasets.md  dataset-phases.md  ffi-and-interop.md  frontend.md  gpu-training-handoff.md  implementation-roadmap.md  performance.md  runtime-and-control.md  security.md  training-and-evaluation.md
research/: README.md
research/model-theory/: README.md  voxter-model-theory-first-draft.docx  voxter-model-theory-first-draft.tex
src/: README.md
src/voxter/: README.md  __init__.py  contracts.py
tests/: README.md
tests/integration/: README.md
tests/unit/: README.md  test_capture_analysis.py  test_capture_events.py  test_capture_frames.py  test_capture_pipewire.py  test_capture_portal.py  test_capture_preview.py  test_capture_session.py  test_contracts.py  test_preprocessing_acceptance.py  test_preprocessing_alignment.py  test_preprocessing_calibration.py  test_preprocessing_observation.py  test_preprocessing_stack.py  test_preprocessing_stage1_dataset.py  test_runtime_benchmark.py  test_training_stage1_data.py  (+1 more)
tools/: README.md  accept_stage1_dataset.py  analyze_capture_run.py  build_aligned_manifest.py  build_stage1_dataset.py  calibrate_delta_sys.py  capture_manual_run.py  runtime_benchmark.py  smoke_stage1_data.py  smoke_stage1_torch.py
(+29 files in other folders)
